syntax = "proto3";

package proto;

// The greeting service definition.
service Service {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // 创建学生信息
  rpc Register (RegisterRequest) returns (RegisterReply) {}

  //查询学生信息
  rpc Query (StudentId) returns (StudentInfo) {}

  //修改学生专业
  rpc AlterProfession(StudentId) returns (Result) {}

  //删除学生
  rpc Delete(StudentId) returns (Result) {}
}

// The request message containing the user's name(addr).
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// 注册学生信息
message RegisterRequest {
  string name       = 1;
  int32 age         = 2;
  string profession = 3;
}

//学生Id
message StudentId {
  int32 id = 1;
}


//返回请求
message Result {
  bool res = 1;
}

// The register message containing the student info.
message StudentInfo {
  int32 id          = 1;
  string name       = 2;
  int32 age         = 3;
  string profession = 4;
}

// The response message
message RegisterReply {
  int32 id = 1;
}
